--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,7 @@
-<h1>All lists</h1>
-
-<% @lists.each do |list| %>
-  <%= link_to list.name, list_path(list) %>
-<% end %>
+<div class="container">
+  <h1>All lists</h1>
+    <%= link_to "Add new list", new_list_path, class: "btn btn-success"  %>
+    <% @lists.each do |list| %>
+      <li><%= link_to list.name, list_path(list) %></li>
+    <% end %>
+</div>
