--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,9 +1,11 @@
+<div class="container">
 <h1><%= @list.name %></h1>
-
-<% @list.movies.each do |movie| %>
-  <h2><%= movie.title %></h2>
-  <p><%= movie.overview %></p>
-  <img src="<%= movie.poster_url %>" alt="<%= movie.title %> poster">
-<% end %>
-
 <%= link_to "Add a movie", new_list_bookmark_path(@list) %>
+</div>
+
+<div class="container">
+  <% @list.bookmarks.each do |bookmark| %>
+    <h2><%= bookmark.movie.title %></h2>
+    <p><%= bookmark.comment %></p>
+  <% end %>
+</div>
